tests/ui/parser/literals/trailing_dot.sol
uint256 constant a = 2 + 2.;
//~^ ERROR: empty rational
